@@ -974,6 +974,38 @@ continue execution by typing ``c``.  This can be disabled if necessary
 by setting the environment variable ``BZR_SIGQUIT_PDB=0``.
 
 
+Profiling
+=========
+
+Bazaar has some built-in support for collecting and saving profiling
+information. In the simpliest case, the --lsprof option can be used as
+shown below::
+
+  bzr --lsprof ...
+
+This will dump the profiling information to stdout before exiting.
+Alternatively, the --lsprof-file option can be used to specify a filename
+to save the profiling data into to. By default, profiling data saved to a
+file is a pickled Python object making it possible to reload the data and
+do with it what you will. For convenience though:
+
+* if the filename ends in "txt", it will be dumped in a text format.
+
+* if the filename ends in "grind", it will be converted to a format
+  loadable by the KCacheGrind visualisation tool.
+
+Here is an example of how to use the --lsprof-file option in combination
+with KCacheGrind to visualise what the "status" command is doing::
+
+  bzr --lsprof-file status001.callgrind status
+  kcachegrind status001.callgrind &
+
+.. Note:: bzr also has a --profile option that uses the hotshot profiler
+   instead of the lsprof profiler. The hotshot profiler can be useful
+   though the lsprof one is generally recommended. See
+   http://docs.python.org/lib/node795.html.
+
+
 Jargon
 ======
 
